# learn-grpc

./: .gitignore  README.md
client-java/: README.md  pom.xml
client-java/src/main/java/com/client_java/app/: App.java
client-java/src/main/proto/: Hinterface.proto
client-node/: README.md  package.json
client-node/src/: Main.js
client-python/: README.md
client-python/src/: Main.py
client-python/src/proto/: Hinterface.proto
client-python/src/stubs/: Hinterface_pb2_grpc.py
client-rust/: Cargo.toml  README.md
client-rust/src/: Main.rs
server-java/: README.md  pom.xml
server-java/src/main/java/com/server_java/app/: App.java
server-java/src/main/proto/: Hinterface.proto
server-node/: README.md  package-lock.json  package.json
server-node/src/: Main.js
server-python/: Pipfile  README.md
server-python/src/: Hinterface_pb2.py  Main.py
server-python/src/proto/: Hinterface.proto
server-python/src/stubs/: Hinterface_pb2.py  Hinterface_pb2_grpc.py
server-rust/: Cargo.toml  README.md  build.rs
server-rust/src/: Main.rs
server-rust/src/proto/: Hinterface.rs  Hinterface_grpc.rs  Lib.rs
